# error-info

./: Cargo.toml  README.md  _typos.toml  cliff.toml  test.rest
error-code/: Cargo.toml
error-code-derive/: Cargo.toml
error-code-derive/src/: error_info.rs  lib.rs
error-code/examples/: error.rs  web.rs
error-code/src/: lib.rs
