[package]
name = "error-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22.0"
error-code-derive = { workspace = true }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
anyhow = { workspace = true }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
backtrace = "0.3.71"
error-code = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
